<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="edu.cofc.tipcalculator_counter_delacruz.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/amountTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/splitTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberSplitting_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/splitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tipTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black" />

    </TableRow>

    <RadioGroup
        android:id="@+id/tipChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/defaultTip1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTip1_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/defaultTip2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTip2_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/customTipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customTip_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tipTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/tipFinal_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tipTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/total_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalCostAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/totalTipForEach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:text="@string/total_textForSplit"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalForEachAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButton_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateButton_text"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
</TableLayout>
